--- a/client/src/components/PostDetails/PostDetails.module.css
+++ b/client/src/components/PostDetails/PostDetails.module.css
@@ -46,6 +46,10 @@
     font-weight: bold;
 }
 
+.details .content .middle .likes i {
+    color: blueviolet;
+}
+
 .details .content>p {
     margin-bottom: 50px;
 }
