--- a/client/src/components/CatalogPage/CatalogPage.module.css
+++ b/client/src/components/CatalogPage/CatalogPage.module.css
@@ -25,6 +25,11 @@
     margin-bottom: 30px;
 }
 
+.empty-catalog {
+    font-size: 26px;
+    height: 30vh;
+}
+
 #facts .cards .card {
     width: 30%;
     border: 1px solid #A6DDFC;
