--- a/client/src/components/PostDetails/PostDetails.module.css
+++ b/client/src/components/PostDetails/PostDetails.module.css
@@ -26,12 +26,14 @@
     font-size: 36px;
     text-align: center;
     margin-bottom: 10px;
+    overflow-wrap: break-word;
 }
 
 .details .content .middle>span {
     display: block;
     font-size: 20px;
     margin-bottom: 10px;
+    overflow-wrap: break-word;
 }
 
 .details .content .middle .degree {
@@ -56,6 +58,9 @@
 
 .details .content>p {
     margin-bottom: 50px;
+    overflow-wrap: break-word;
+    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 /*---------- Resp ------------*/
