--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -29,11 +29,11 @@
 .nav-item a {
     text-decoration: none;
     color: black;
+    transition: all 0.7s ease;
 }
 
 .nav-item a:hover {
     color: blueviolet;
-    text-decoration: underline;
 }
 
 .main-header .nav-bar {
