--- a/client/src/components/HomePage/About/About.module.css
+++ b/client/src/components/HomePage/About/About.module.css
@@ -1,12 +1,14 @@
 #about {
     background-color: #A6DDFC;
     padding: 100px;
+    box-shadow: 0px 2px 8px black;
 }
 
 #about h2 {
     text-align: center;
     font-size: 36px;
     margin-bottom: 20px;
+    text-shadow: 1px 1px 2px white;
 }
 
 #about div:last-of-type {
