--- a/client/src/components/HomePage/About/AboutPage/AboutPage.module.css
+++ b/client/src/components/HomePage/About/AboutPage/AboutPage.module.css
@@ -23,6 +23,7 @@
 
 .about-page .intro div:last-of-type img {
     width: 100%;
+    box-shadow: 0px 0px 8px;
 }
 
 .about-page .story {
@@ -47,6 +48,7 @@
     left: 0px;
     background-color: #D7EFFD;
     padding: 40px;
+    box-shadow: 0px 0px 8px;
 }
 
 .about-page .team-work div:first-of-type hr {
@@ -65,6 +67,7 @@
 .about-page .team-work div:last-of-type img {
     width: 100%;
     height: 60vh;
+    box-shadow: 0px 0px 8px;
 }
 
 .about-page .more-info {
@@ -81,6 +84,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    box-shadow: 0px 0px 8px;
 }
 
 .about-page .more-info div:last-of-type {
@@ -108,7 +112,8 @@
 .about-page .team div img {
     width: 100%;
     height: 100%;
-    object-fit: contain
+    object-fit: contain;
+    box-shadow: 0px 0px 8px;
 }
 
 @media (max-width: 980px) {
