--- a/client/src/components/HomePage/Ideas/Ideas.module.css
+++ b/client/src/components/HomePage/Ideas/Ideas.module.css
@@ -2,6 +2,7 @@
     padding: 60px 100px;
     background-color: #A6DDFC;
     margin-bottom: 100px;
+    box-shadow: 0px 0px 10px;
 }
 
 #ideas>h2 {
@@ -50,6 +51,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    box-shadow: 0px 0px 9px black;
 }
 
 #ideas .container .img .overlay {
@@ -68,6 +70,7 @@
     transform: translate(-50%, -50%);
     color: #fff;
     font-size: 90px;
+    transition: all 1s ease;
 }
 
 #ideas .container .img i:hover {
@@ -82,6 +85,7 @@
     width: 100px;
     border-radius: 100%;
     margin: 0px 0px 20px 70px;
+    border: 2px solid black;
 }
 
 #ideas>div:last-of-type {
