Update search functionality on 'Persons' page + styles updates.

--- a/client/src/components/CatalogPage/CatalogPage.module.css
+++ b/client/src/components/CatalogPage/CatalogPage.module.css
@@ -36,6 +36,7 @@
     border-radius: 18px;
     overflow: hidden;
     margin-bottom: 30px;
+    box-shadow: 0px 0px 8px black;
     transition: all 1s ease;
 }
 
