--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -60,6 +60,7 @@
 .btn-create {
     padding: 8px 30px;
     box-shadow: 8px 8px 8px lightgray;
+    transition: all 1s ease;
 }
 
 .buttons {
@@ -99,6 +100,7 @@
 .form input {
     width: 100%;
     margin: 10px 0px 20px 0px;
+    transition: all 1s ease;
 }
 
 .form input:hover {
