--- a/client/src/components/PostDetails/PostDetails.module.css
+++ b/client/src/components/PostDetails/PostDetails.module.css
@@ -14,6 +14,7 @@
     border-bottom-right-radius: 90px;
     overflow: hidden;
     margin-bottom: 30px;
+    box-shadow: 0px 0px 10px black;
 }
 
 .details .card .img img {
