--- a/client/src/components/CatalogPage/CatalogPage.module.css
+++ b/client/src/components/CatalogPage/CatalogPage.module.css
@@ -41,6 +41,7 @@
     overflow: hidden;
     margin-bottom: 30px;
     box-shadow: 0px 0px 8px black;
+    cursor: pointer;
     transition: all 1s ease;
 }
 
